welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value Match
  if(Match.abs(n-100)<=10|| Match.abs(n-200)<=10) {
     ^nearHundred:2: error: not found: value Match
  if(Match.abs(n-100)<=10|| Match.abs(n-200)<=10) {
                            ^